force-app/main/default/objects/ampi__IATI_Policy__c/ampi__IATI_Policy__c.object-meta.xml
<CustomObject>
    <description>Custom object to create and track catalog IATI policies in Amp Impact</description>
    <label>IATI Policy</label>
    <nameField>
        <displayFormat>IP-{00000}</displayFormat>
        <label>IATI Policy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IATI Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>