force-app/main/default/objects/ampi__IATI_Policy__c/fields/ampi__IATI_Policy_Marker_Vocabulary_URI__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Policy_Marker_Vocabulary_URI__c</fullName>
    <description>Text field to contain the URI link to the specific vocabulary used for a Policy Marker classification. Must be populated if the vocabulary code is 99.</description>
    <inlineHelpText>This link will be published in the IATI Activity file and must be publicly accessible.</inlineHelpText>
    <label>IATI Policy Marker Vocabulary URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>