force-app/main/default/objects/ampi__IATI_Policy__c/fields/ampi__Policy_Marker__c.field-meta.xml
<CustomField>
    <fullName>ampi__Policy_Marker__c</fullName>
    <description>Picklist field to select the Policy Marker.</description>
    <inlineHelpText>Select the Policy Marker</inlineHelpText>
    <label>Policy Marker</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gender Equality</fullName>
            </value>
            <value>
                <fullName>Aid to Environment</fullName>
            </value>
            <value>
                <fullName>Participatory Development/Good Governance</fullName>
            </value>
            <value>
                <fullName>Trade Development</fullName>
            </value>
            <value>
                <fullName>Aid Targeting the Objectives of the Convention on Biological Diversity</fullName>
            </value>
            <value>
                <fullName>Aid Targeting the Objectives of the Framework Convention on Climate Change - Mitigation</fullName>
            </value>
            <value>
                <fullName>Aid Targeting the Objectives of the Framework Convention on Climate Change - Adaptation</fullName>
            </value>
            <value>
                <fullName>Aid Targeting the Objectives of the Convention to Combat Desertification</fullName>
            </value>
            <value>
                <fullName>Reproductive, Maternal, Newborn and Child Health (RMNCH)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>