force-app/main/default/objects/ampi__IATI_Policy__c/fields/ampi__Policy_Marker_Code__c.field-meta.xml
<CustomField>
    <fullName>ampi__Policy_Marker_Code__c</fullName>
    <description>Formula field to generate the Policy Marker Code based on the value in ampi__Policy_Marker__c.</description>
    <formula>CASE(TEXT(ampi__Policy_Marker__c),
&quot;Gender Equality&quot; , 1 ,
&quot;Aid to Environment&quot;  , 2 ,
&quot;Participatory Development/Good Governance&quot; , 3 ,
&quot;Trade Development&quot; , 4 ,
&quot;Aid Targeting the Objectives of the Convention on Biological Diversity&quot;  , 5 ,
&quot;Aid Targeting the Objectives of the Framework Convention on Climate Change - Mitigation&quot; , 6 ,
&quot;Aid Targeting the Objectives of the Framework Convention on Climate Change - Adaptation&quot; , 7 ,
&quot;Aid Targeting the Objectives of the Convention to Combat Desertification&quot;  , 8 ,
&quot;Reproductive, Maternal, Newborn and Child Health (RMNCH)&quot;  , 9 ,
null
)</formula>
    <label>Policy Marker Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>