force-app/main/default/objects/ampi__IATI_Policy__c/fields/ampi__Policy_Marker_Narrative__c.field-meta.xml
<CustomField>
    <fullName>ampi__Policy_Marker_Narrative__c</fullName>
    <description>Long text area field to track the specific policy marker for IATI Reporting.</description>
    <label>Policy Marker Narrative</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>