force-app/main/default/objects/ampi__IATI_Policy__c/fields/ampi__Vocabulary__c.field-meta.xml
<CustomField>
    <fullName>ampi__Vocabulary__c</fullName>
    <description>Picklist field to track the Policy Marker Vocabulary (i.e. the source of the Policy Marker).</description>
    <inlineHelpText>Select the Policy Marker Vocabulary</inlineHelpText>
    <label>Vocabulary</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OECD DAC CRS</fullName>
            </value>
            <value>
                <fullName>Reporting Organization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>