force-app/main/default/objects/ampi__IATI_Policy__c/fields/ampi__Vocabulary_Code__c.field-meta.xml
<CustomField>
    <fullName>ampi__Vocabulary_Code__c</fullName>
    <description>This formula field generates the IATI Policy Marker Code based on the value selected in the ampi__Vocabulary__c picklist field.</description>
    <formula>CASE(TEXT(ampi__Vocabulary__c),
&apos;OECD DAC CRS&apos;,1,
&apos;Reporting Organization&apos;,99,
null
)</formula>
    <label>Vocabulary Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>