force-app/main/default/objects/ampi__IATI_Policy__c/validationRules/ampi__Policy_Marker_Vocabulary_URI_is_set.validationRule-meta.xml
<ValidationRule>
    <fullName>ampi__Policy_Marker_Vocabulary_URI_is_set</fullName>
    <active>true</active>
    <description>Ensure Policy Marker Vocabulary URI is populated if Vocabulary Code = 99.</description>
    <errorConditionFormula>AND(ampi__Vocabulary_Code__c  = 99,  ISBLANK( ampi__IATI_Policy_Marker_Vocabulary_URI__c ))</errorConditionFormula>
    <errorDisplayField>ampi__IATI_Policy_Marker_Vocabulary_URI__c</errorDisplayField>
    <errorMessage>IATI Policy Marker Vocabulary URI must be filled out if the Vocabulary Code is set to 99.</errorMessage>
</ValidationRule>